-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.4.0, Lustre 2.5.0, Lustre 2.7.0, Lustre 2.5.2
-
None
-
3
-
9491
When setting the conf param max_cached_mb on the MGS, clients connecting to it's filesystem did not pick up the set value, and instead used the default. There is this correlating error message in the /var/log/messages on the client:
Jul 31 23:01:17 vm4 kernel: LustreError: 5911:0:(obd_config.c:1308:class_process_proc_param()) writing proc entry max_cached_mb err -19
As -19 is a ENODEV, this may point to a bug where llite parameters are attempted to be set before the system is ready for them.
Version of Lustre used: IEEL Lustre and client
Steps to reproduce:
1. Install Lustre and manually configure a filesystem. In this case, I had 4 Lustre servers: 2 were an active-active pair for the MGT and MDT, and 2 were an active-active pair for a pair of OSTs.
2. Mount the filesystem and run "lctl get_param llite.*.max_cached_mb" on the client. Note what the default value is.
3. Unmount the filesystem.
2. Run 'lctl conf_param <fsname>.llite.max_cached_mb=<a value other than the default noted above>' on the MGS.
3. Mount the filesystem on a client
4. Check /var/log/messages, see the above error message.
5. Re-run "lctl get_param llite.*.max_cached_mb" on the client, and see that it is still the default value, not the value set on the MGS.